--- a/templates/epl.html
+++ b/templates/epl.html
@@ -120,16 +120,7 @@
                 </table>
           </div>
       </div>
-    <script>
-      var scrollDownButton = document.getElementById("headerButton");
-
-      scrollDownButton.addEventListener("click", function() {
-          var scrollPosition = 850; 
-          window.scrollTo({
-            top: scrollPosition,
-            behavior: "smooth"});
-      });
-    </script>
+    <script type="text/javascript" src="{% static 'main.js' %}"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   </body>
