don'nt know wht i changed, lets see

--- a/static/stylei.css
+++ b/static/stylei.css
@@ -92,6 +92,7 @@ right: 0;
 	margin-top: 15px;
 	text-align: center;
 	color:gray;
+	width: 550px;
 }
 #data2{
 	width: 700px;
@@ -108,12 +109,12 @@ right: 0;
 	color: grey;
 }
 
-.flex-containerScore {
+.flex-Todaymatch {
 	display: flex;
 	flex-direction: column;
 	font-family: 'Poppins', sans-serif;
 }
-.flex-containerScore > div{
+.flex-Todaymatch > div{
 	text-align: left;
 	font-size: 20px;
 
@@ -121,17 +122,19 @@ right: 0;
 #crest{
 	width:30px;
 }
+#crestVS{
+	width: 18px;
+}
 .w3-table-all{border-collapse:collapse;border-spacing:0;width:100%;display:table}.w3-table-all{border:1px solid #ccc}
 .w3-bordered tr,.w3-table-all tr{border-bottom:1px solid #ddd}.w3-striped tbody tr:nth-child(even){background-color:#f1f1f1}
 .w3-table-all tr:nth-child(odd){background-color:#fff}.w3-table-all tr:nth-child(even){background-color:#f1f1f1}
 .w3-hoverable tbody tr:hover,.w3-ul.w3-hoverable li:hover{background-color:#ccc}.w3-centered tr th,.w3-centered tr td{text-align:center}
 .w3-table td,.w3-table th,.w3-table-all td,.w3-table-all th{padding:8px 8px;display:table-cell;text-align:center;vertical-align:top}
-.w3-table th:first-child,.w3-table td:first-child,.w3-table-all th:first-child,.w3-table-all td:first-child{padding-left:16px}
+.w3-tablei th:first-child,.w3-table td:first-child,.w3-table-all th:first-child,.w3-table-all td:first-child{padding-left:16px;width:100%;display:table}
 .w3-green,.w3-hover-green:hover{color:#fff!important;background-color:#4CAF50!important}
-.w3-table-all{
+.w3-table-all {
 	height: fit-content;
 }
-
 
 #datatable{
 	margin: auto;
@@ -177,4 +180,19 @@ td{
 	color: white;
 	line-height: 17px;
 	background-color: rgb(117, 101, 101);
+}
+
+.flex-top5{
+	display:flex;
+	border-style: solid;
+	font-family: 'Poppins', sans-serif;
+}
+#dataGoal{
+	width: 700px;
+	margin: 2px;
+	text-align: center;
+	height: fit-content;
+	padding-left: 10px;
+	font-size: 25px;
+	font-family: 'Poppins', sans-serif;
 }
