--- a/templates/epl.html
+++ b/templates/epl.html
@@ -215,6 +215,28 @@
             </div>
           </div>
 
+          <footer>
+            <hr>
+            <div class="flex-Footer">
+                <div id="r1footer">
+                    <img  id="logo"src="{% static 'assets/epltitle.png' %}"/><br>
+                    <h4 style="color: grey;">Reliable scores and data about English Premier League. Thanks to <i>Football-Org</i> Api for the backend support.</h4>
+                </div>
+              <div id="r12footer">
+                <h3><b>&ensp;Contact: </b></h3><br>
+                    <a class="social-icon" href="https://www.facebook.com/manish.cdhy1" target="_blank">
+                        <ion-icon name="logo-facebook"> FaceBook</ion-icon>    
+                    </a>
+                    <a class="social-icon" href="https://github.com/Kshitiz-Mhto" target="_blank">
+                        <ion-icon name="logo-github"> Github</ion-icon>
+                    </a>
+                    <a class="social-icon" href="https://www.linkedin.com/in/kshitiz-mahato-825110241/" target="_blank">
+                        <ion-icon name="logo-linkedin"> Linkedin</ion-icon>
+                    </a>
+                </div>  
+            </div> 
+        </footer>
+
           <div id="loader">
             <div class="spinner"></div><br>
             <p>Loading...</p>
